@@ -273,6 +273,7 @@ sitefile_vfs	= @e_datadir@/@PACKAGE@/file_vfs.txt
 -site_invite = !=guest *
 -site_kick = +O
 -site_kill = +O
+-site_link = +O
 -site_msg = +O
 -site_purge = +O +G
 -site_readd = +O +G
