@@ -48,6 +48,10 @@ int file_rmdir(const char *dirname, wzd_context_t * context);
 
 wzd_user_t * file_getowner(const char *filename, wzd_context_t * context);
 
+/* symlink operations */
+int symlink_create(const char *existing, const char *link);
+int symlink_remove(const char *link);
+
 /* returns 1 if file is currently locked, else 0 */
 int file_lock(int fd, short lock_mode);
 int file_unlock(int fd);
